Big changes to the security interface