@@ -1,36 +1,42 @@
 package com.maxswaine.gig.api.dto;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import jakarta.annotation.Nullable;
 import jakarta.persistence.*;
 import lombok.*;
 import org.hibernate.annotations.UuidGenerator;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.io.Serializable;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
-@Getter
-@Setter
 @Entity
 @Table(name = "users")
 @ToString(exclude = {"gigs", "friends"})
 @AllArgsConstructor
 @NoArgsConstructor
 @Builder
-public class User implements Serializable {
+@Data
+public class User implements UserDetails {
 
     @Id
     @UuidGenerator
     @Column(nullable = false, updatable = false)
     private String id;
+    @NonNull
     private String firstname;
+    @NonNull
     private String lastname;
+    @NonNull
     private String email;
+    @NonNull
     private String username;
+    @NonNull
     private String password;
+
+    @Enumerated(EnumType.STRING)
     private Role role;
 
     @ManyToMany
@@ -46,8 +52,28 @@ public class User implements Serializable {
     @JsonIgnore
     private List<Gig> gigs;
 
+    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(role);
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
 }
